[Master] Fixed the main gap issue in ie.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4957,7 +4957,7 @@ header[role='banner'] a.logo {
     margin-right: 0; }
 
 body main {
-  -ms-flex: inherit; }
+  -ms-flex: none; }
 
 .node-type-campaign main {
   padding: 0px;
