--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,5 +1,5 @@
 body main {
-  -ms-flex: inherit;
+  -ms-flex: none;
 }
 .node-type-campaign {
   main {
